--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -8,47 +8,48 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-22 22:35+0600\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2020-06-23 16:28+0600\n"
+"PO-Revision-Date: 2020-06-23 10:36+0000\n"
+"Last-Translator: b'  <admin@mail.com>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Translated-Using: django-rosetta 0.9.4\n"
 
 #: cart/forms.py:8 cart/templates/cart/detail.html:16
 msgid "Quantity"
-msgstr ""
+msgstr "Cantidad"
 
 #: cart/templates/cart/detail.html:6 cart/templates/cart/detail.html:10
 msgid "Your shopping cart"
-msgstr ""
+msgstr "Tu carro"
 
 #: cart/templates/cart/detail.html:14
 msgid "Image"
-msgstr ""
+msgstr "Imagen"
 
 #: cart/templates/cart/detail.html:15
 msgid "Product"
-msgstr ""
+msgstr "Producto"
 
 #: cart/templates/cart/detail.html:17 cart/templates/cart/detail.html:40
 msgid "Remove"
-msgstr ""
+msgstr "Eliminar"
 
 #: cart/templates/cart/detail.html:18
 msgid "Unit price"
-msgstr ""
+msgstr "Precio unitario"
 
 #: cart/templates/cart/detail.html:19
 msgid "Price"
-msgstr ""
+msgstr "Precio"
 
 #: cart/templates/cart/detail.html:48
 msgid "Subtotal"
-msgstr ""
+msgstr "Total parcial"
 
 #: cart/templates/cart/detail.html:53
 #, python-format
@@ -60,43 +61,43 @@ msgstr ""
 
 #: cart/templates/cart/detail.html:63
 msgid "Total"
-msgstr ""
+msgstr "Total"
 
 #: cart/templates/cart/detail.html:71
 msgid "Apply a coupon"
-msgstr ""
+msgstr "Aplica un cupón"
 
 #: cart/templates/cart/detail.html:74
 msgid "Apply"
-msgstr ""
+msgstr "Aplicar"
 
 #: cart/templates/cart/detail.html:78
 msgid "Continue shopping"
-msgstr ""
+msgstr "Seguir comprando"
 
 #: cart/templates/cart/detail.html:79
 msgid "Checkout"
-msgstr ""
+msgstr "Revisa"
 
 #: coupons/forms.py:6
 msgid "Coupon"
-msgstr ""
+msgstr "Cupón"
 
-#: django_shop/settings.py:119
+#: django_shop/settings.py:120
 msgid "English"
 msgstr "Inglés"
 
-#: django_shop/settings.py:120
+#: django_shop/settings.py:121
 msgid "Spanish"
 msgstr "Español"
 
 #: shop/templates/shop/base.html:7 shop/templates/shop/base.html:12
 msgid "My shop"
-msgstr ""
+msgstr "Mi tienda"
 
 #: shop/templates/shop/base.html:18
 msgid "Your cart"
-msgstr ""
+msgstr "Su carro"
 
 #: shop/templates/shop/base.html:20
 #, python-format
@@ -109,21 +110,21 @@ msgstr ""
 
 #: shop/templates/shop/base.html:26
 msgid "Your cart is empty."
-msgstr ""
+msgstr "Tu carrito esta vacío"
 
 #: shop/templates/shop/product/detail.html:20
 msgid "Add to cart"
-msgstr ""
+msgstr "Añadir al carrito"
 
 #: shop/templates/shop/product/list.html:6
 #: shop/templates/shop/product/list.html:24
 msgid "Products"
-msgstr ""
+msgstr "Productos"
 
 #: shop/templates/shop/product/list.html:11
 msgid "Categories"
-msgstr ""
+msgstr "Categorias"
 
 #: shop/templates/shop/product/list.html:14
 msgid "All"
-msgstr ""
+msgstr "Todas"
